# admiralty_tide_tables_pi

./: CMakeLists.txt  README.md  VERSION.cmake  bld2.bat
.circleci/: config.yml
OLD/: CMakeLists.txt.bak
OLD/.circleci/: config-test.txt
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake
manual/: antora.yml  site.yml
manual/admiralty/: site.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  admiralty_tide_tables_pi.pot  es_ES.po  fr_FR.po  it_IT.po
src/: ATTCalculation.cpp  ATTCalculation.h  ATTDialog.cpp  ATTDialog.h  ATTDirectoryLister.h  ATTPortFactory.cpp  ATTPortFactory.h  ATTSecondaryPort.cpp  ATTSecondaryPort.h  ATTServices.cpp  ATTServices.h  ATTStandardPort.cpp  ATTStandardPort.h  ATTTime.cpp  ATTTime.h  ATTTimeValidator.cpp  ATTTimeValidator.h  CMakeLists.txt  att.xcf  att_pi.cpp  att_pi.h  ocpn_plugin.h  tool_icon.cpp  tool_icon.h  version.h
utils/: beautify
